--- a/allies/pom.xml
+++ b/allies/pom.xml
@@ -10,14 +10,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>allies</artifactId>
-
-    <!--<dependencies>
+    <dependencies>
         <dependency>
             <groupId>com.baeldung</groupId>
             <artifactId>battlefield</artifactId>
-            <version>${project.version}</version>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
-    </dependencies>-->
+    </dependencies>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
